--- a/src/css/twimber.css
+++ b/src/css/twimber.css
@@ -23,6 +23,8 @@ header {
   line-height: 25px;
   vertical-align: center;
 
+  text-align: center;
+
   /* color */
   background-color: #DADFE1;
 
@@ -147,11 +149,13 @@ header .btns .btn-max {
   margin-left:10px;
   font-size:12px;
   margin-top:2px;
+  user-select:none;
 }
 .tweet-at {
   font-size:15px;
   color:#cccccc !important;
   text-decoration:none;
+  user-select:none;
 }
 .tweet-at:hover {
   text-decoration:none;
@@ -163,6 +167,7 @@ header .btns .btn-max {
 .tweet-screen_name {
   font-size:16px;
   color:#999999;
+  user-select:none;
 }
 
 #page-wrapper {
@@ -226,15 +231,4 @@ header .btns .btn-max {
 .textarea {
   outline:0;
   margin-top:20px;
-}
-.title {
-  /*broken*/
-  display:none;
-  
-  position:fixed;
-  top:0;
-  right:0;
-  left:0;
-  margin: 0 auto;
-  width:auto;
 }
