--- a/src/css/twimber.css
+++ b/src/css/twimber.css
@@ -232,3 +232,16 @@ header .btns .btn-max {
   outline:0;
   margin-top:20px;
 }
+
+.favorited {
+  color:#FFAC33;
+}
+
+.retweeted {
+  color:#77B255;
+}
+
+.title {
+  text-align:center;
+  width:auto;
+}
