--- a/src/css/twimber.css
+++ b/src/css/twimber.css
@@ -54,6 +54,8 @@ header .btns div {
   margin-right:5px;
 
   border-radius: 50%;
+
+  cursor: pointer;
 }
 
 header .btn-tweet {
@@ -66,6 +68,8 @@ header .btn-tweet {
   float:left;
   padding-left:5px;
   padding-right:5px;
+
+  cursor: pointer;
 }
 
 header .btns .btn-close {
@@ -232,6 +236,7 @@ header .btns .btn-max {
 #pin button,
 #pin input {
   width:100%;
+  cursor: pointer;
 }
 
 #pin input {
@@ -265,4 +270,8 @@ header .btns .btn-max {
 .title {
   text-align:center;
   width:auto;
+}
+
+.media-actions i {
+  cursor: pointer;
 }
