--- a/src/css/twimber.css
+++ b/src/css/twimber.css
@@ -146,7 +146,7 @@ header .btns .btn-max {
 }
 .tweet-body {
   color: #292F33;
-  cursor: pointer;
+  cursor: text;
   font-family: Arial,Verdana,sans-serif;
   font-size: 13px;
   font-weight: 400;
